# CryptoBotSDK

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
CryptoBotSDK/: __init__.py  cryptobot.py
CryptoBotSDK/types/: AppStats.py  Balance.py  Check.py  Currencies.py  ExchangeRate.py  Invoice.py  Transfer.py  __init__.py
examples/createinvoice/: createinvoice.py
