[project]
name = "CryptoBotSDK"
version = "0.1.0"
description = "CrytoBot (@send) telegram sdk"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
    "ruff>=0.11.11",
]

[tool.uv.workspace]
members = [
    "examples/telegram-bot",
]

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"