[metadata]
name = CryptoBotSDK
version = 0.1.0
author = Daniil Akromov
author_email = r3s1zetv@gmail.com
url = https://github.com/yumieiko/CryptoBotSDK
description = CryptoBot Software Development Kit 
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    
project_urls = 
    Bug Tracker = https://github.com/yumieiko/CryptoBotSDK/issues

[options]
pakage_dir =
    = CryptoBotSDK
packages = find: 
python_requires = >= 3.6
[options.packages.find]
where = CryptoBotSDK